# stock-django

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test-django.yml
gestionnaire/: db.sqlite3  package.json
gestionnaire/gestionnaire/: asgi.py  settings.py  urls.py  wsgi.py
gestionnaire/static_src/css/: main.css
gestionnaire/stock/: forms.py  models.py  urls.py  views.py
gestionnaire/stock/fixtures/: companies.json  prices.json  products.json
gestionnaire/stock/migrations/: 0001_initial.py
src/: notes.md  package.json  requirements.txt  tailwind.config.js
src/catalog/: apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
src/catalog/migrations/: 0001_initial.py  0002_product_unit.py
src/catalog/tests/: test_models.py  test_views.py
src/config/: settings.py  urls.py  wsgi.py
src/fixtures/: categories.json  companies.json  orders.json  prices.json  products.json  states.json
src/order/: apps.py  context_processors.py  forms.py  middleware.py  models.py  urls.py  views.py
src/order/migrations/: 0001_initial.py  0002_company_address_company_city_company_is_store_and_more.py  0003_stateorder_order_lineorder.py  0004_stateorder_name.py  0005_alter_order_ht_alter_order_ttc.py
src/order/tests/: test_views.py
src/src/: settings.py  urls.py
src/static/css/: main.css
src/static/js/: changeShop.js  popup.js
src/stock/: context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
src/templates/: base.html  baseDashboard.html
src/user/: forms.py  urls.py  views.py
(+57 files in other folders)
